# irrpolygf2

./: CMakeLists.txt  Checker.cpp  Checker.hpp  Generator.cpp  Generator.hpp  Makefile  Polynomial.cpp  Polynomial.hpp  README.md  Random.cpp  Random.hpp  main.cpp  timings.txt
docs/: Doxyfile  Makefile
docs/html/: _checker_8cpp.html  _checker_8hpp.html  _checker_8hpp_source.html  _generator_8cpp.html  _generator_8hpp.html  _generator_8hpp_source.html  _polynomial_8cpp.html  _polynomial_8hpp.html  _polynomial_8hpp_source.html  _random_8cpp.html  _random_8hpp.html  _random_8hpp_source.html  annotated.html  checker_8hpp_source.html  class_checker-members.html  class_checker.html  class_generator-members.html  class_generator.html  class_polynomial-members.html  class_polynomial.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  md___users_vadimpiven__development_berlekamp-zassenhaus_src__r_e_a_d_m_e.html  md___users_vadimpiven__development_berlekamp__r_e_a_d_m_e.html  md___users_vadimpiven__development_irrpolygf2__r_e_a_d_m_e.html  menudata.js  method_8hpp_source.html  pages.html  polynomial_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  (+1 more)
(+14 files in other folders)
